# flask_test_task

./: app.py  database.db  pyproject.toml
controllers/: brand_controller.py  manufacturer_controller.py
forms/: brand_form.py  manufacturer_form.py
models/: model.py
routes/: admin_client.py  api.py
templates/: base.html  brand_list.html  manufacturer_list.html
