[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Evhenii Podolian <alfan2620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
